# BOSTONCREW_SAMPLER

./: .gitattributes  .gitignore  AppCheckBox.qml  AppIcon.qml  AppModalOverlay.qml  AppPanel.qml  AppSwitch.qml  AppTextField.qml  AppTheme.qml  AssignSlidePopup.qml  CMakeLists.txt  ChromeButton.qml  DashboardView.qml  EditWorkspace.qml  HelpPopup.qml  HostInfoWindow.qml  HostPopup.qml  IconButton.qml  LicenseGate.qml  LicenseManager.cpp  LicenseManager.h  Main.qml  PreviewSelectWindow.qml  PreviewWorkspace.qml  QuickSlotsPanel.qml  README.md  RemoteWindow.qml  SampleDialog.qml  SampleManager.qml  SamplerBackend.cpp  SamplerBackend.h  SamplesConsole.qml  SamplesStrip.qml  SlideDialog.qml  SlideLibrary.qml  SlideManagerWindow.qml  StagePanel.qml  StageWindow.qml  TextButton.qml  TimerWindow.qml  (+4 more)
.github/workflows/: macos-deploy.yml  windows-deploy.yml
installer/: bostoncrew_sampler.iss
scripts/: deploy_macos.sh  deploy_windows.ps1  generate_app_icon.ps1  validate_macos_package.sh
tests/: LicenseManagerTests.cpp
